--- a/index.html
+++ b/index.html
@@ -1,17 +1,195 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
-<html>
-<title>Portfolio</title>
-	<head>
-		<link rel="stylesheet" href="style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc.5/angular-material.min.js"></script>
+<html lang="en" ng-app="portfolioApp">
 
-	</head>
-	<body>
-		<header></header>
-		<div></div>
-		<footer></footer>
-	</body>
+<head>
+
+    <meta charset="utf-8">
+    <base href="/">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Personal Portfolio</title>
+
+
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
+    <script src="js/ui-bootstrap-tpls-2.1.3.min.js"></script>
+
+    <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>-->
+    <script src="js/freelancer.min.js"></script>
+    <script src="js/jquery.appear.js" type="text/javascript"></script>
+    <script src="js/bars.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
+
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway:300" rel="stylesheet">
+    <link href="css/barsstyle.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+
+    <!-- Custom Fonts -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body id="page-top" class="index">
+
+<div header-nav></div>
+
+
+    <!-- Portfolio Grid Section -->
+    <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Work</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            
+<!-- /Where the individual works appear/ -->
+
+        <div ng-view></div>
+    </section>
+
+    <!-- About Section -->
+    <section class="success" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>About</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>Enthusiast of visuals, art and design, recently I had the opportunity of becoming a web-development begginer. Working with HTML5, CSS, Javascript and some other languages (at the moment), interested in User Experience and responsive design... Really enjoying learning new tools and having code challenges!</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Qué dise usteer por la gloria de mi madre quietooor está la cosa muy malar torpedo ese hombree torpedo llevame al sircoo pupita. Papaar papaar a gramenawer hasta luego Lucas hasta luego Lucas ese hombree fistro pupita. A peich caballo blanco caballo negroorl ese pedazo de no te digo trigo por no llamarte Rodrigor.</p>
+                </div>
+               
+            </div>
+
+<!-- SKILLS      -->
+
+            <div class="wraper">
+            <div class="skillst6">
+                <div class="skillbar" data-percent="70%">
+                    <div class="count-bar color-1">
+                        <div class="title">HTML 5</div>
+                        <div class="count"></div>
+                    </div>
+                </div>
+                <div class="skillbar" data-percent="79%">
+                    <div class="count-bar color-2">
+                        <div class="title">CSS 3</div>
+                        <div class="count"></div>
+                    </div>
+                </div>
+                <div class="skillbar" data-percent="60%">
+                    <div class="count-bar color-3">
+                        <div class="title">Javascript</div>
+                        <div class="count"></div>
+                    </div>
+                </div>
+                <div class="skillbar" data-percent="50%">
+                    <div class="count-bar color-4">
+                        <div class="title">AngularJS</div>
+                        <div class="count"></div>
+                    </div>
+                </div>
+                <div class="skillbar" data-percent="70%">
+                    <div class="count-bar color-5">
+                        <div class="title">Design</div>
+                        <div class="count"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+         <div class="col-lg-8 col-lg-offset-2 text-center">
+           <a href="img/Portfolio.pdf" id ="btndonwload" class="btn btn-lg btn-outline" download>
+                 <i class="fa fa-download"></i> Download CV  
+           </a>
+         </div>
+     </div>
+    </section>
+
+    <!-- Skills Section -->
+ 
+ <div class="col-lg-8 col-lg-offset-2 text-center" id="prefooter">
+     </div>
+
+    <!-- Footer -->
+    <footer class="text-center" id="footer">
+        <div class="footer-above">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col col-md-4">
+                        <h3>Location</h3>
+                        <p>Madrid / Wherever
+                            <br>Spain</p>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3>Around the Web</h3>
+                        <ul class="list-inline">
+                            <!-- <li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                            </li> -->
+                            <li>
+                                <a target="_blank" href="https://plus.google.com/u/0/100652421739106147646" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="https://twitter.com/marina_lafuente" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="https://es.linkedin.com/in/marinalafuentes" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                            </li>
+                            <!-- <li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                            </li> -->
+                        </ul>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3>Hire Me</h3>
+                        <p>Always good to hear from you!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-below">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        Build with <i class="fa fa-heart"></i> by the beach
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+    <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
+        <a class="btn btn-primary" href="#page-top">
+            <i class="fa fa-chevron-up"></i>
+        </a>
+    </div>
+
+    <!-- Portfolio Modals -->
+
+
+</body>
+
 </html>
