--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Enthusiast of visuals, art and design, recently I had the opportunity of becoming a web-development begginer. Working with HTML5, CSS, Javascript and some other languages (at the moment), interested in User Experience and responsive design... Really enjoying learning new tools and having code challenges!</p>
+                    <p>Enthusiast of visuals, art and design, recently I had the opportunity of becoming a web-development begginer. Working with HTML5, CSS, Javascript and some other languages (at the moment), interested in User Experience and responsive design.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Qué dise usteer por la gloria de mi madre quietooor está la cosa muy malar torpedo ese hombree torpedo llevame al sircoo pupita. Papaar papaar a gramenawer hasta luego Lucas hasta luego Lucas ese hombree fistro pupita. A peich caballo blanco caballo negroorl ese pedazo de no te digo trigo por no llamarte Rodrigor.</p>
+                    <p>.. Really enjoying learning new tools and having code challenges!
+                    In my free time I like to continue improving my drawing and painting skills -and getting better in tech- also I'm a sea and beach lover, always looking for sunny days.</p>
                 </div>
                
             </div>
@@ -118,8 +119,8 @@
         </div>
 
          <div class="col-lg-8 col-lg-offset-2 text-center">
-           <a href="img/Portfolio.pdf" id ="btndonwload" class="btn btn-lg btn-outline" download>
-                 <i class="fa fa-download"></i> Download CV  
+           <a href="img/cv.pdf" target="_blank" id ="btndonwload" class="btn btn-lg btn-outline" download="cv.pdf">
+                 <i class="fa fa-download"></i> Download CV
            </a>
          </div>
      </div>
@@ -162,6 +163,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Hire Me</h3>
+                        <p>marlafsan@gmail.com</p>
                         <p>Always good to hear from you!</p>
                     </div>
                 </div>
