--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
-        <div class="container">
+        <div class="container fluid">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Work</h2>
@@ -134,6 +134,9 @@
     <!-- Footer -->
     <footer class="text-center" id="footer">
         <div class="footer-above">
+            <div class="container"></div>
+        </div>
+        <div class="footer-below">
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
@@ -144,9 +147,6 @@
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
-                            <!-- <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li> -->
                             <li>
                                 <a target="_blank" href="https://plus.google.com/u/0/100652421739106147646" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
                             </li>
@@ -156,9 +156,6 @@
                             <li>
                                 <a target="_blank" href="https://es.linkedin.com/in/marinalafuentes" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
-                            <!-- <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li> -->
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
@@ -167,10 +164,6 @@
                         <p>Always good to hear from you!</p>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="footer-below">
-            <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         Build with <i class="fa fa-heart"></i> by the beach
